0.7.0/_sources/gallery/add_points_3d.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/add_points_3d.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_add_points_3d.py>`
        to download the full example as a Python script or as a
        Jupyter notebook..

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_add_points_3d.py:


Add points 3D
=============

Display a labels layer above of an image layer using the add_labels and
add_image APIs, then add points in 3D

.. tags:: visualization-nD

.. GENERATED FROM PYTHON SOURCE LINES 10-31



.. image-sg:: /gallery/images/sphx_glr_add_points_3d_001.png
   :alt: add points 3d
   :srcset: /gallery/images/sphx_glr_add_points_3d_001.png
   :class: sphx-glr-single-img





.. code-block:: Python


    from scipy import ndimage as ndi
    from skimage import data

    import napari

    blobs = data.binary_blobs(
            length=128, volume_fraction=0.1, n_dim=3
            )[::2].astype(float)
    labeled = ndi.label(blobs)[0]

    viewer = napari.Viewer(ndisplay=3)
    viewer.add_image(blobs, name='blobs', scale=(2, 1, 1))
    viewer.add_labels(labeled, name='blob ID', scale=(2, 1, 1))
    pts = viewer.add_points()

    viewer.camera.angles = (0, -50, 50)
    pts.mode = 'add'

    if __name__ == '__main__':
        napari.run()


.. _sphx_glr_download_gallery_add_points_3d.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: add_points_3d.ipynb <add_points_3d.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: add_points_3d.py <add_points_3d.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: add_points_3d.zip <add_points_3d.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
